--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.23.12",
     "next": "15.4.4",
     "primereact": "^10.9.6",
     "react": "19.1.0",
