--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev:p": "next dev --turbopack --port 3991",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -25,16 +27,36 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "swr": "^2.3.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@chromatic-com/storybook": "4.1.0",
+    "@storybook/addon-a11y": "9.2.0-alpha.1",
+    "@storybook/addon-actions": "^9.0.8",
+    "@storybook/addon-docs": "9.2.0-alpha.1",
+    "@storybook/addon-onboarding": "9.2.0-alpha.1",
+    "@storybook/addon-vitest": "9.2.0-alpha.1",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/nextjs-vite": "^9.2.0-alpha.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-select": "^5.0.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "autoprefixer": "^10.4.21",
+    "playwright": "^1.54.2",
+    "postcss": "^8.5.6",
+    "storybook": "^9.1.0",
+    "storybook-addon-next": "^1.8.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4",
+    "webpack": "^5.101.0"
   }
 }
